syntax = "proto3";

option csharp_namespace = "Baka.Hipster.Burger.Shared.Protos";

package shared;

import "Protos/common.proto";

service CustomerProto {
	rpc Add (CustomerRequest) returns (IdMessage);
	rpc Delete (IdMessage) returns (BoolResponse);
	rpc CanDelete (IdMessage) returns (BoolResponse);
	rpc Update (CustomerRequest) returns (BoolResponse);
	rpc Get (IdMessage) returns (CustomerResponse);
	rpc GetAll (Empty) returns (CustomerResponses);
}